--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+altgraph==0.17.4
+macholib==1.16.3
+modulegraph==0.19.6
 packaging==24.0
 pillow==10.3.0
+py2app==0.28.7
 PyMuPDF==1.24.1
 PyMuPDFb==1.24.1
+PyPDF2==3.0.1
 pytesseract==0.3.10
