--- a/sample_pdfs/config_files/sample_config.cfg
+++ b/sample_pdfs/config_files/sample_config.cfg
@@ -1,1 +1,10 @@
-configuration
+[Files]
+template = "C:/Data Science/Luddy Hackathon/root_folder/sample_pdfs/template_pdf/template1.pdf"
+
+[OCR]
+text1 = "complaint"
+loc1 = 155,214,466,246
+text2 = "summons by sheriff"
+loc2 = 190,214,426,249
+text3 = "appearance by attorney in civil case"
+loc3 = 185,215,426,245
